feat: Multiple UI improvements and file optimizations
Fixed ProgressBar freezing when saving file; Added ProgressBar in place of the name when loading a notebook to show loading progress; Pages and their contents now only save if they have been modified since last save to reduce CPU and storage media stress

--- a/WID/OnPageText.xaml
+++ b/WID/OnPageText.xaml
@@ -26,6 +26,7 @@
                 IsReadOnly="False"
                 FontSize="36"
                 Foreground="Black"
+                TextChanged="ReceivedTextInput"
                 />
 
 
