--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -39,6 +39,15 @@
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 />
+            <muxc:ProgressBar
+                x:Name="pbFileStatus"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Width="512"
+                IsIndeterminate="False"
+                ShowPaused="False"
+                ShowError="False"
+                />
         </Grid>
 
         <Popup
