fix(note): Fixed silent loading indicator. Value at the beginning is always 0

--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -44,6 +44,7 @@
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 Width="512"
+                Value="0"
                 IsIndeterminate="False"
                 ShowPaused="False"
                 ShowError="False"
