feat(main): Patterns now react to user input when creating a new notebook, pattern functionality in notebooks not yet implemented

--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -36,6 +36,7 @@
              >
             <TextBlock
                 x:Name="tbAppTitle"
+                FontFamily="Segoe UI Variable"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
                 />
