--- a/WID/MainPage.xaml
+++ b/WID/MainPage.xaml
@@ -67,10 +67,16 @@
             
             <muxc:NavigationView.MenuItems>
                 <muxc:NavigationViewItem
-                    Icon="Play"
-                    Content="Notes"
+                    Content="Notebooks"
                     Tag="NotePage"
-                    />
+                    >
+                    <muxc:NavigationViewItem.Icon>
+                        <FontIcon
+                            FontFamily="Segoe Fluent Icons"
+                            Glyph="&#xE70F;"
+                            />
+                    </muxc:NavigationViewItem.Icon>
+                </muxc:NavigationViewItem>
             </muxc:NavigationView.MenuItems>
 
             <Frame
