fix(main): Collapse AutoSuggestBox because it's not in use

--- a/WID/MainPage.xaml
+++ b/WID/MainPage.xaml
@@ -45,6 +45,7 @@
 
 
             <AutoSuggestBox
+                Visibility="Collapsed"
                 x:Name="SearchBox"
                 QueryIcon="Find"
                 PlaceholderText="Search notes"
