--- a/WID/OnPageText.xaml
+++ b/WID/OnPageText.xaml
@@ -26,6 +26,7 @@
                 IsReadOnly="False"
                 FontSize="36"
                 Foreground="Black"
+                Background="Transparent"
                 TextChanged="ReceivedTextInput"
                 />
 
