fix(notes): Fix bug where clicking on empty area on the Scrollviewer would redirect user to the first RichEditBox

--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -341,6 +341,7 @@
             </SplitView.Pane>
             <ScrollViewer
                 x:Name="svPageZoom"
+                IsTabStop="True"
                 ZoomMode="Enabled"
                 MinZoomFactor="0.1"
                 MaxZoomFactor="10"
